# Poetry-CLI

./: README.md  poetry.sh  pyproject.toml
poetry_cli/: cli.py
