[tool.poetry]
name = "poetry-cli"
version = "0.1.0"
description = ""
authors = ["Josh <josh@opaliq.com>"]
readme = "README.md"
packages = [{include = "poetry_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
